# MMP_TrajOpt

./: .gitignore  README.md
src/: .rosinstall  .rosinstall.bak
src/kinova_moveit_config/gen3_move_it_config/config/: mmp.srdf
src/kinova_moveit_config/gen3_move_it_config/launch/: demo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch
src/kinova_planner/: CMakeLists.txt  package.xml
src/kinova_planner/launch/: move_test.launch
src/kinova_planner/src/: RedisClient.cpp  RedisClient.h  move_test.cpp  redis_communication.cpp
src/kortex_description/arms/gen3/urdf/: GEN3_URDF_V12.urdf  gen3_macro.xacro
src/kortex_description/arms/mmp/meshes/: BaseCombo.STL
src/kortex_description/arms/mmp/urdf/: mmp_macro.xacro
